# WoWD

./: AUTHORS  Makefile.am  Todo  configure.ac  reconf
dep/include/mysql/: mysql_version.h  mysqld_ername.h  mysqld_error.h
dep/lib/release/: libmySQL.lib
dep/src/: Makefile.am
doc/: How To  THANKS  TODO
doc/Manuals/GM Manual/: GM Manual.odt
doc/SpellExtra History/: History.txt  Only spellid.txt  Readme.txt  dupes.txt
src/: Makefile.am  logonserver.conf  realms.conf  wowd.conf
src/game/: AIInterface.cpp  AIInterface.h  AddonMgr.cpp  AddonMgr.h  AlteracValley.cpp  AlteracValley.h  ArathiBasin.cpp  ArathiBasin.h  AreaTrigger.cpp  AreaTrigger.h  Arenas.cpp  Arenas.h  AuctionHouse.cpp  AuctionHouse.h  AuctionMgr.cpp  AuctionMgr.h  BattlegroundCommands.cpp  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  CellHandler.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CombatHandler.cpp  Container.cpp  Container.h  Corpse.cpp  Corpse.h  Creature.cpp  Creature.h  DuelHandler.cpp  DynamicObject.cpp  DynamicObject.h  EventMgr.cpp  (+129 more)
src/logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  LogonCommServer.cpp  LogonCommServer.h  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.cpp  LogonOpcodes.h  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  Makefile.am  PeriodicFunctionCall_Thread.h  RealmlistThreadMgr.cpp
src/scripts/: DotA-WoW-0.1Beta.cpp  Event-Darkmoon-Faire-Elywnn.cpp  Gossip_Battlemaster.cpp  Gossip_Innkeepers.cpp  GuardGossip.cpp  HunterSpells.cpp  IRCBotPlugin.cpp  Instance_Deadmines.cpp  ItemSpells_1.cpp  MageSpells.cpp  Makefile.am  OnyxiaAI.cpp  PaladinSpells.cpp  RogueSpells.cpp  ShamanSpells.cpp  SimpleCreatureAI.cpp  WarlockSpells.cpp  WarriorSpells.cpp  WebServ.cpp
src/shared/: AuthCodes.h  ByteBuffer.h  Common.h  CrashHandler.cpp  CrashHandler.h  LocationVector.h  Log.cpp  Log.h  Makefile.am  MemoryLeaks.cpp  MersenneTwister.cpp  MersenneTwister.h  PreallocatedQueue.h  Singleton.h  Timer.h  Util.cpp  Util.h  WoWGuid.h  WorldPacket.h  crc32.h  svn_revision.h
src/shared/AsyncNet/: AsyncDefines.h  AsyncListenSocket.h  AsyncListenerThread.h  AsyncNet.h  AsyncSocketHolder.h  AsyncWorkerThread.h
src/shared/Auth/: WowCrypt.cpp
src/shared/Config/: Config.cpp  Config.h
src/shared/Config/dotconfpp/: dotconfpp.cpp
src/shared/Database/: DBC.cpp  DBC.h  DBCStores.cpp  DBCStores.h  DataStore.h  Database.cpp  Database.h  DatabaseEnv.h  dbcfile.cpp  dbcfile.h
src/shared/Database/impl/: MySQLDatabase.cpp  MySQLDatabase.h  PostgreDatabase.cpp  PostgreDatabase.h
src/shared/NetworkBase/: BaseSocket.cpp  BaseSocket.h  ListenSocket.cpp  ListenSocket.h  SocketDefines.h  SocketHolder.cpp  SocketHolder.h
src/shared/Threading/: Guard.h  LockedQueue.h  Mutex.h  ThreadStarter.h  Threading.h
src/wowd/: Main.cpp  MainServerDefines.h  Makefile.am  Master.cpp  Master.h  WowdConsole.cpp  WowdConsole.h
win/: wowdVC71.sln  wowdVC80.sln
win/VC71/: game.vcproj  logonserver.vcproj  readme_wowdsrv.txt  shared.vcproj  wowd.vcproj  zlib.vcproj
win/VC80/: game.vcproj  logonserver.vcproj  shared.vcproj  wowd.vcproj  wowdsrv.vcproj  zlib.vcproj
